# rag-chatbot-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  api.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
evaluation/: ragas_eval.ipynb
src/rag_chatbot/: __init__.py  config.py  pipeline.py  query_rewriter.py
tests/: conftest.py  test_api.py  test_integration.py  test_pipeline.py
